Added Telegram Bot - 3rd step